[package]
name = "silf"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.30", features = ["full"] }
dotenvy = "0.15"           
pretty_env_logger = "0.5"  
log = "0.4"
dashmap = "6"